{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 14,
  "lineage": "cda6edea-e3b7-565f-43ad-dec8fef3c788",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b76c93383dd8fa8",
            "arn": "arn:aws:ec2:us-east-1:010028775188:elastic-ip/eipalloc-00b76c93383dd8fa8",
            "association_id": "eipassoc-08c335590fdffc194",
            "domain": "vpc",
            "id": "eipalloc-00b76c93383dd8fa8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03444bd3c67160873",
            "private_dns": "ip-10-0-134-131.ec2.internal",
            "private_ip": "10.0.134.131",
            "public_dns": "ec2-54-156-156-104.compute-1.amazonaws.com",
            "public_ip": "54.156.156.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tooling-app-eks-nat-eip",
              "iac_environment": "development"
            },
            "tags_all": {
              "Name": "tooling-app-eks-nat-eip",
              "iac_environment": "development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:security-group/sg-026005e7cd1f0814c",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e513e6c9aa4d01a5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e513e6c9aa4d01a5"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-026005e7cd1f0814c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e513e6c9aa4d01a5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tooling-app-eks-cluster-2024100710040255890000000c",
            "name_prefix": "tooling-app-eks-cluster-",
            "owner_id": "010028775188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:security-group/sg-0e513e6c9aa4d01a5",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026005e7cd1f0814c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0e513e6c9aa4d01a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026005e7cd1f0814c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026005e7cd1f0814c"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "tooling-app-eks-node-2024100710040255510000000b",
            "name_prefix": "tooling-app-eks-node-",
            "owner_id": "010028775188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tooling-app-eks": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tooling-app-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.self_managed_node_group[\"worker_group1\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:internet-gateway/igw-0dbdd1795495d2686",
            "id": "igw-0dbdd1795495d2686",
            "owner_id": "010028775188",
            "tags": {
              "Name": "citatech-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:subnet/subnet-059312a48dc2d2396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059312a48dc2d2396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010028775188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "citatech-io-eks-vpc-public-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc-public-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:subnet/subnet-0d1ec1489713dfdb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1ec1489713dfdb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010028775188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "citatech-io-eks-vpc-public-us-east-1b",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc-public-us-east-1b",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:subnet/subnet-0c04d14a75eaab972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c04d14a75eaab972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010028775188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "citatech-io-eks-vpc-public-us-east-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc-public-us-east-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:subnet/subnet-0364dd4a215379f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0364dd4a215379f17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010028775188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "citatech-io-eks-vpc-public-us-east-1d",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc-public-us-east-1d",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:subnet/subnet-0e7bf8431acc22aa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7bf8431acc22aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010028775188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "citatech-io-eks-vpc-public-us-east-1e",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc-public-us-east-1e",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:subnet/subnet-004ebe96d93874f97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.208.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004ebe96d93874f97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010028775188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "citatech-io-eks-vpc-public-us-east-1f",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc-public-us-east-1f",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f6dbf308a92a9cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010028775188:vpc/vpc-09f6dbf308a92a9cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0468b97c023328f30",
            "default_route_table_id": "rtb-0e7f943ed7f1edc8f",
            "default_security_group_id": "sg-0f10561a4f0acc14a",
            "dhcp_options_id": "dopt-01ae355fc48b203d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f6dbf308a92a9cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7f943ed7f1edc8f",
            "owner_id": "010028775188",
            "tags": {
              "Name": "citatech-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "citatech-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}